sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:10: error: 'case' expected but identifier found.
      BLEU => (if (i> debut){
      ^DutchFlagAlgo:14: error: '}' expected but ';' found.
      BLANC => (while (getCouleur(avantBlanc)==BLANC){
^DutchFlagAlgo:18: error: ')' expected but integer literal found.
                avantBlanc -=1)
                             ^DutchFlagAlgo:25: error: ';' expected but integer literal found.
                fin-=1)
                     ^DutchFlagAlgo:30: error: eof expected but '}' found.
}
^